Init config and log

--- a/conf/eagle_config.ini
+++ b/conf/eagle_config.ini
@@ -10,7 +10,7 @@ log_pfx=eagle.log
 policy=/usr/local/lib/eagle/eagle.policy
 cpu=libeaglecpu.so
 disk=libealgedisk.so
-nic=libeaglenic.so
+net=libeaglenet.so
 
 [timer]
 # unit: seconds
