eagle: arch2.0, change the device plugin to service plugin

--- a/eagle/CMakeLists.txt
+++ b/eagle/CMakeLists.txt
@@ -3,4 +3,4 @@ project (eagle_entrance C)
 set(CMAKE_VERBOSE_MAKEFILE on)
 
 add_subdirectory(src)
-#add_subdirectory(test)
+add_subdirectory(src/sched_service)
