eagle: Arch2.0. Add service management

--- a/eagle/src/sched_service/CMakeLists.txt
+++ b/eagle/src/sched_service/CMakeLists.txt
@@ -4,7 +4,7 @@ set ( CMAKE_INCLUDE_CURRENT_DIR ON)
 
 # Add head directory
 include_directories ("${PROJECT_SOURCE_DIR}")
-include_directories ("${PROJECT_SOURCE_DIR}/../../inc")
+include_directories ("${PROJECT_SOURCE_DIR}/../../inc/shared")
 include_directories ("${PROJECT_SOURCE_DIR}/../pwrapi_adaptor")
 
 # Load source file
