--- a/eagle/src/CMakeLists.txt
+++ b/eagle/src/CMakeLists.txt
@@ -2,9 +2,14 @@ cmake_minimum_required (VERSION 3.16)
 project (eagle C)
 set ( CMAKE_INCLUDE_CURRENT_DIR ON)
 # Add head file directory
-include_directories ("${PROJECT_SOURCE_DIR}/../inc")
-include_directories ("${PROJECT_SOURCE_DIR}/pwrapi_adaptor")
-include_directories ("${PROJECT_SOURCE_DIR}/pwrapi_adaptor/pwrapi")
+include_directories (
+    "${PROJECT_SOURCE_DIR}/../inc"
+    "${PROJECT_SOURCE_DIR}/../inc/shared"
+    "${PROJECT_SOURCE_DIR}/pwrapi_adaptor"
+    "${PROJECT_SOURCE_DIR}/pwrapi_adaptor/pwrapi"
+    #"${PROJECT_SOURCE_DIR}/sched_service"
+    )
+
 # Add library directory
 link_directories (
     "${PROJECT_SOURCE_DIR}/pwrapi_adaptor/pwrapi"
@@ -13,22 +18,24 @@ link_directories (
 
 # Load source file
 aux_source_directory(${PROJECT_SOURCE_DIR} EAGLE_SRC_DIR)
+#aux_source_directory(${PROJECT_SOURCE_DIR}/sched_service EAGLE_SRC_DIR)
 
 # Set compiling policy
 set (PG_NAME ${PROJECT_NAME})
 add_executable (${PG_NAME} ${EAGLE_SRC_DIR})
-target_link_libraries(${PG_NAME} -lpwrapi_adaptor -lpwrapi -lpthread)
+target_link_libraries(${PG_NAME} -lpwrapi_adaptor -lpwrapi -ldl -lpthread)
 set (CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Set installaltion path
 #set ( CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}")
 set ( CMAKE_INSTALL_PREFIX "/usr" CACHE PATH "Install path prefix" FORCE)
-#install (TARGETS ${PG_NAME} DESTINATION bin)
 install (TARGETS ${PG_NAME} DESTINATION sbin)
 
 # Install default config files
 install (FILES "${PROJECT_SOURCE_DIR}/../conf/eagle_config.ini" DESTINATION /etc/sysconfig)
 install (FILES "${PROJECT_SOURCE_DIR}/../eagle.service" DESTINATION /usr/lib/systemd/system)
+install (FILES "${CMAKE_CURRENT_BINARY_DIR}/pwrapi_adaptor/libpwrapi_adaptor.so" DESTINATION /usr/lib)
+install (FILES "${CMAKE_CURRENT_BINARY_DIR}/sched_service/libsched_service.so" DESTINATION /usr/lib)
 
 # release complile mode
 #set(CMAKE_BUILD_TYPE "Release")
