--- a/eagle/conf/eagle_config.ini
+++ b/eagle/conf/eagle_config.ini
@@ -2,12 +2,12 @@
 file_size=10
 cmp_cnt=3
 log_level=0
-log_path=/opt/os_data/log
-bak_log_path=/opt/os_data/log/bak
+log_path=/var/log/eagle
+bak_log_path=/var/log/eagle/bak
 log_pfx=eagle.log
 
 [policy]
-policy=/usr/local/lib/eagle/eagle.policy
+policy=/etc/eagle/eagle.policy
 cpu=libeaglecpu.so
 disk=libealgedisk.so
 net=libeaglenet.so
