freq_service: 增加调频属性设置能力

--- a/eagle/conf/eagle_config.ini
+++ b/eagle/conf/eagle_config.ini
@@ -7,7 +7,7 @@ bak_log_path=/var/log/eagle/bak
 log_pfx=eagle.log
 
 [policy]
-policy=/etc/eagle/eagle.policy
+policy=/etc/eagle/eagle_policy.ini
 cpu=libeaglecpu.so
 disk=libealgedisk.so
 net=libeaglenet.so
