--- a/eagle/conf/eagle_policy.ini
+++ b/eagle/conf/eagle_policy.ini
@@ -14,10 +14,12 @@ watt_th = 85
 enable=1
 freq_lib = libfreq_service.so
 cpufreq_gov = conservative
-# perf_loss_rate [0,100]
-perf_loss_rate = 5
-# sampling_rate [0,10000]
+# sampling_rate [0,10000000], us.
+# 0: indicates that the default sampling_rate of cpufreq_gov is retained.
 sampling_rate = 0
+# perf_loss_rate [-1,100], Effective when cpufreq_gov=seep only.
+# -1: indicates that keep the governor's default value
+perf_loss_rate = 5
 
 [idle_service]
 enable=0
