完善eagle安装目录规划，并改为普通用户eagle运行

--- a/eagle/eagle.service
+++ b/eagle/eagle.service
@@ -5,7 +5,7 @@ Description= Eagle Service.
 ExecStart=/usr/sbin/eagle  /etc/eagle/eagle_config.ini
 Restart=always
 RestartSec=5
-User=root
+User=eagle
 
 [Install]
 WantedBy=multi-user.target
