--- a/eagle/src/pwrapi_adaptor/CMakeLists.txt
+++ b/eagle/src/pwrapi_adaptor/CMakeLists.txt
@@ -22,8 +22,8 @@ if(BUILD_LLT)
 endif(BUILD_LLT)
 
 # set installation path
-set ( CMAKE_INSTALL_PREFIX "/usr/local" CACHE PATH "Install path prefix" FORCE)
-install (TARGETS ${PG_NAME} DESTINATION lib)
+set ( CMAKE_INSTALL_PREFIX "/usr" CACHE PATH "Install path prefix" FORCE)
+install (TARGETS ${PG_NAME} DESTINATION lib64)
 
 # Release compile mode
 #set(CMAKE_BUILD_TYPE "Release")
