eagle: 收到配置权限被释放事件时，主动停止服务 &安装/运行优化 &policy配置校验优化

--- a/eagle/conf/eagle_policy.ini
+++ b/eagle/conf/eagle_policy.ini
@@ -1,7 +1,9 @@
 # eagle default policy
 
 [policy]
+# name. length < 32. Excess content will be truncated.
 name=default
+# desc.  length < 256. Excess content will be truncated.
 desc=optimaze for high energy efficiency
 
 [sched_service]
@@ -16,20 +18,27 @@ watt_interval_ms = 0
 # [0, 2^n-1], n is the number of NUMA nodes of the current device
 # 0: keep the default value
 watt_domain_mask = 0
+# Any CPUID of the first schedule domain.
+# This item is used for specifing the first schedule domain which may affinity with IRQ
+watt_first_domain = 0
 # all: all tasks in user space will be added to the watt schedule list.
-# or put the key words of the tasks name, separeted by ','. e.g.: nginx, mysql
+# or put the key words of the tasks name, separeted by '|'. e.g.: nginx|mysql
+# string length < 129, excess content will be truncated.
 watt_procs = all
 
 # To enable smart grid, the watt_sched must be enabled first.
 smart_grid_enable = 1
 # all: all tasks in user space will be added to the watt schedule list.
-# or put the key words of the tasks name, separeted by '|'. e.g.: nginx, mysql
+# or put the key words of the tasks name, separeted by '|'. e.g.: nginx|mysql
 # All vip tasks will be added to watt_procs list.
+# string length < 129, excess content will be truncated.
 smart_grid_vip_procs = nginx|mysql
 # If the smart_grid governor enabled, system will use smart_grid as the cpufreq governor,
 # regardless the value of cpufreq_gov in section freq_service.
 smart_grid_gov_eable = 0
+# options: performance powersave userspace conservative ondemand schedutil seep
 smart_grid_vip_gov = performance
+# options: performance powersave userspace conservative ondemand schedutil seep
 smart_grid_lev1_gov = conservative
 
 [freq_service]
@@ -53,9 +62,11 @@ cpuidle_gov = menu
 enable=0
 pcap_lib = libpcap_service.so
 enable_pcap = 1
+# [100, 10000] watt
 cap_target = 500
 
 [mpc_service]
 enable=0
 mpc_lib = libmpc_service.so
+# 0: disable, 1: enable
 enable_mpc = 1
