eeagle: 完善主流程日志

--- a/eagle/conf/eagle_policy.ini
+++ b/eagle/conf/eagle_policy.ini
@@ -56,6 +56,7 @@ perf_loss_rate = 5
 [idle_service]
 enable=0
 idle_lib = libidle_service.so
+# options: menu teo ladder
 cpuidle_gov = menu
 
 [pcap_service]
