--- a/eagle/CMakeLists.txt
+++ b/eagle/CMakeLists.txt
@@ -5,5 +5,6 @@ set(CMAKE_VERBOSE_MAKEFILE on)
 add_subdirectory(src/pwrapi_adaptor)
 add_subdirectory(src/sched_service)
 add_subdirectory(src/freq_service)
+add_subdirectory(src/mpc_service)
 add_subdirectory(src)
 
