add cpu idle service

--- a/eagle/conf/eagle_policy.ini
+++ b/eagle/conf/eagle_policy.ini
@@ -54,9 +54,9 @@ sampling_rate_us = 0
 perf_loss_rate = 5
 
 [idle_service]
-enable=0
+enable=1
 idle_lib = libidle_service.so
-# options: menu teo ladder
+# options: menu teo ladder haltpoll
 cpuidle_gov = menu
 
 [pcap_service]
