--- a/eagle/src/CMakeLists.txt
+++ b/eagle/src/CMakeLists.txt
@@ -43,5 +43,4 @@ install (FILES "${PROJECT_SOURCE_DIR}/../eagle.service" DESTINATION /usr/lib/sys
 
 # debug complile mode
 set(CMAKE_BUILD_TYPE "Debug")
-set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
-
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wshadow -Wstrict-prototypes -Wmissing-prototypes -Werror")
