--- a/eagle/src/mpc_service/CMakeLists.txt
+++ b/eagle/src/mpc_service/CMakeLists.txt
@@ -30,5 +30,4 @@ install (TARGETS ${PG_NAME} DESTINATION /etc/eagle/plugin)
 
 # Debug compile mode
 set(CMAKE_BUILD_TYPE "Debug")
-set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
-
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wshadow -Wstrict-prototypes -Wmissing-prototypes -Wformat=2 -Wformat-security -Werror")
