🐞 fix(service/policy): Bug Fix: UpdateService won't update; IsNumStr can not check negative num; Wrong watt domask and firstDomanrange.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ eagle/src/pwrapi_adaptor/pwrapi/libpwrapi.so
 eagle/src/pwrapi_adaptor/pwrapi/powerapi.h
 eagle/src/pwrapi_adaptor/pwrapi/pwrdata.h
 eagle/src/pwrapi_adaptor/pwrapi/pwrerr.h
+.cache
+compile_commands.json
