--- a/eagle/conf/eagle_config.ini
+++ b/eagle/conf/eagle_config.ini
@@ -1,16 +1,26 @@
+# eagle default configuration file
 [log]
+# Maximum file size of log file in MB
 file_size=10
+# Maximum number of log files to keep
 cmp_cnt=3
+# 0-debug 1-info 2-warning 3-error
 log_level=0
+# Path of log file
 log_path=/var/log/eagle
+# Path of backup log file
 bak_log_path=/var/log/eagle/bak
+# Log file name
 log_pfx=eagle.log
 
 [policy]
+# Path of policy file
 policy=/etc/eagle/eagle_policy.ini
+# Path of plugin directory, plugins are some service shared library files.
 plugin_path=/etc/eagle/plugin
 
 [timer]
 # unit: seconds
+# Eagle will update config file and policy file every config_update_interval seconds
 config_update_interval=75
 policy_update_interval=5
