--- a/eagle/conf/eagle_policy.ini
+++ b/eagle/conf/eagle_policy.ini
@@ -11,12 +11,12 @@ enable=1
 sched_lib = libsched_service.so
 
 watt_sched_enable = 1
-# [0, 100]. 0: keep the default value
+# [0, 100]. 0: do nothing, keep the last value
 watt_threshold = 0
-# [0, 3600000].ms 0: keep the default value
+# [0, 3600000].ms, 0: do nothing, keep the last value,
 watt_interval_ms = 0
 # [0, 2^n-1], n is the number of NUMA nodes of the current device
-# 0: keep the default value
+# 0: do nothing keep the last value
 watt_domain_mask = 0
 # Any CPUID of the first schedule domain.
 # This item is used for specifing the first schedule domain which may affinity with IRQ
@@ -46,11 +46,12 @@ enable=1
 freq_lib = libfreq_service.so
 # options: performance powersave userspace conservative ondemand schedutil seep
 cpufreq_gov = conservative
-# sampling_rate_us [0,10000000], us.
+# sampling_rate_us [0,10000000], us. The min value may be not 0, which determined by the machine.
 # 0: indicates that the default sampling_rate_us of cpufreq_gov is retained.
+# sampling_rate only effects the cpufreq_gov=conservative/conservative/seep
 sampling_rate_us = 0
 # perf_loss_rate [-1,100], Effective when cpufreq_gov=seep only.
-# -1: indicates that keeping the governor's default value
+# -1: do nothing, keep the governor's last value
 perf_loss_rate = 5
 
 [idle_service]
