🐞 fix: 控制权被释放时在socket线程释放主线程的msg消息，导致异常

--- a/eagle/conf/eagle_policy.ini
+++ b/eagle/conf/eagle_policy.ini
@@ -67,8 +67,10 @@ enable_pcap = 1
 # [100, 10000] watt
 cap_target = 500
 
+# mpc service relies on python3-eagle-mpctool installation
+# and also requires the system to suppoort MPC
 [mpc_service]
-enable=1
+enable=0
 mpc_lib = libmpc_service.so
 # 0: disable, 1: enable
-enable_mpc = 1
+enable_mpc = 0
