拼写错误修改
Signed-off-by: fanchun <fanchun_yewu@cmss.chinamobile.com>

--- a/eagle/conf/eagle_policy.ini
+++ b/eagle/conf/eagle_policy.ini
@@ -4,7 +4,7 @@
 # name. length < 32. Excess content will be truncated.
 name=default
 # desc.  length < 256. Excess content will be truncated.
-desc=optimaze for high energy efficiency
+desc=optimize for high energy efficiency
 
 [sched_service]
 enable=1
@@ -19,17 +19,17 @@ watt_interval_ms = 0
 # 0: do nothing keep the last value
 watt_domain_mask = 0
 # Any CPUID of the first schedule domain.
-# This item is used for specifing the first schedule domain which may affinity with IRQ
+# This item is used for specifying the first schedule domain which may affinity with IRQ
 watt_first_domain = 0
 # all: all tasks in user space will be added to the watt schedule list.
-# or put the key words of the tasks name, separeted by '|'. e.g.: nginx|mysql
+# or put the key words of the tasks name, separated by '|'. e.g.: nginx|mysql
 # string length < 129, excess content will be truncated.
 watt_procs = all
 
 # To enable smart grid, the watt_sched must be enabled first.
 smart_grid_enable = 1
 # all: all tasks in user space will be added to the watt schedule list.
-# or put the key words of the tasks name, separeted by '|'. e.g.: nginx|mysql
+# or put the key words of the tasks name, separated by '|'. e.g.: nginx|mysql
 # All vip tasks will be added to watt_procs list.
 # string length < 129, excess content will be truncated.
 smart_grid_vip_procs = nginx|mysql
@@ -68,7 +68,7 @@ enable_pcap = 1
 cap_target = 500
 
 # mpc service relies on python3-eagle-mpctool installation
-# and also requires the system to suppoort MPC
+# and also requires the system to support MPC
 [mpc_service]
 enable=0
 mpc_lib = libmpc_service.so
