fix some bugs and reconste eagle load and init

--- a/eagle/conf/eagle_policy.ini
+++ b/eagle/conf/eagle_policy.ini
@@ -35,7 +35,7 @@ smart_grid_enable = 1
 smart_grid_vip_procs = nginx|mysql
 # If the smart_grid governor enabled, system will use smart_grid as the cpufreq governor,
 # regardless the value of cpufreq_gov in section freq_service.
-smart_grid_gov_eable = 0
+smart_grid_gov_enable = 0
 # options: performance powersave userspace conservative ondemand schedutil seep
 smart_grid_vip_gov = performance
 # options: performance powersave userspace conservative ondemand schedutil seep
