--- a/eagle/conf/eagle_config.ini
+++ b/eagle/conf/eagle_config.ini
@@ -22,5 +22,6 @@ plugin_path=/etc/eagle/plugin
 [timer]
 # unit: seconds
 # Eagle will update config file and policy file every config_update_interval seconds
+# Update interval should greater than 5
 config_update_interval=75
 policy_update_interval=5
