修复 eagle 服务依赖 pwrapis 服务，启动失败问题 #ICT0I0
Signed-off-by: chenyanpanX <chenyanpan@xfusion.com>

--- a/eagle/eagle.service
+++ b/eagle/eagle.service
@@ -1,5 +1,7 @@
 [Unit]
 Description= Eagle Service. 
+After=pwrapis.service
+Requires=pwrapis.service
 
 [Service]
 ExecStart=/usr/sbin/eagle  /etc/eagle/eagle_config.ini
